# SatDump

pipelines/: XMM-Newton.json
plugins/: CMakeLists.txt
plugins/dvb_support/dvbs/: module_dvbs_demod.cpp  module_dvbs_demod.h
plugins/meteosat_support/msg/: module_msg_instruments_decoder.cpp
plugins/xmmnewton_support/: CMakeLists.txt  main.cpp
plugins/xmmnewton_support/xmm_newton/: module_xmmnewton_instruments.cpp  module_xmmnewton_instruments.h
